[package]
name = "Html-77000"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.19"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = "0.3"
ctor = "0.2"
tera = "1"
lazy_static = "1"
itertools = "0.13"
serde = { version = "1", features = ["derive"] }
threadpool = "1"
toml = "0.8"
# anyhow = "1"
# thiserror = "1"
derive_more = {version = "1.0.0-beta", features = ["from"]}